Add Functions (#8)
* docs: improve function headers

* feat: add parsing of functions

* refactor: improve readability, add docstrings

* feat: add typechecking for functions

* feat: add codegeneration for functions, minor improvements

* refactor: apply minor improvements

* chore: bump version