@@ -1,14 +1,8 @@
+import static java.nio.file.StandardOpenOption.CREATE;
+import static java.nio.file.StandardOpenOption.TRUNCATE_EXISTING;
+
 import codegeneration.CodeCache;
 import codegeneration.CodeGenerator;
-import lexer.Lexer;
-import lexer.LexerException;
-import lineevaluation.LineEvaluator;
-import livenessanalysis.LivenessAnalyzer;
-import node.Start;
-import parser.Parser;
-import parser.ParserException;
-import typecheck.TypeChecker;
-
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
@@ -18,18 +12,34 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import lexer.Lexer;
+import lexer.LexerException;
+import lineevaluation.LineEvaluator;
+import livenessanalysis.LivenessAnalyzer;
+import node.Start;
+import parser.Parser;
+import parser.ParserException;
+import symboltable.SymbolTable;
+import symboltable.SymbolTableBuilder;
+import typecheck.TypeChecker;
 
-import static java.nio.file.StandardOpenOption.CREATE;
-import static java.nio.file.StandardOpenOption.TRUNCATE_EXISTING;
-
+/** Compiler for the Easy language. */
 public class EasyCompiler {
-  final private boolean DEBUG = false;
-  final private Path sourceFilePath;
+  private final boolean verbose = false;
+  private final Path sourceFilePath;
   private Start ast;
   private ArrayList<String> code;
+  private SymbolTable symbolTable;
+  private SymbolTableBuilder symbolTableBuilder;
   private TypeChecker typeChecker;
   private boolean parseErrorOccurred = false;
 
+  /**
+   * Constructor for the EasyCompiler class. Please note that each instance
+   * handles a single source file.
+   *
+   * @param sourceFilePath Path to the source file
+   */
   public EasyCompiler(String sourceFilePath) {
     if (!isValidFileName(sourceFilePath)) {
       System.out.println("Invalid file name.");
@@ -39,8 +49,13 @@ public class EasyCompiler {
     this.sourceFilePath = Paths.get(sourceFilePath);
   }
 
+  /**
+   * Checks command line arguments and starts the EasyCompiler.
+   *
+   * @param args Command line arguments
+   */
   public static void main(String[] args) {
-    final String correctCall = "java EasyCompiler [-compile|-liveness|-typeCheck|-parse] <Filename.easy>";
+    final String correctCall = "java EasyCompiler -[compile|liveness|typeCheck|parse] <file>.easy";
     EasyCompiler easyCompiler;
 
     if (args.length == 2) {
@@ -60,16 +75,18 @@ public class EasyCompiler {
           easyCompiler.parse();
           break;
         default:
+          System.out.println("Unknown Option. Correct call:");
           System.out.println(correctCall);
       }
     } else {
+      System.out.println("Missing argument. Correct call:");
       System.out.println(correctCall);
     }
   }
 
-  //------------
+  // ------------
   // Compilation
-  //------------
+  // ------------
   void compile() {
     if (generateCode() && writeOutputFile()) {
       System.out.println("Successful!");
@@ -79,7 +96,8 @@ public class EasyCompiler {
   boolean generateCode() {
     if (parse() && typeCheck()) {
       CodeCache codeCache = new CodeCache();
-      CodeGenerator codeGenerator = new CodeGenerator(codeCache, getProgramName(), this.typeChecker.getSymbolTable());
+      CodeGenerator codeGenerator = new CodeGenerator(
+          codeCache, getProgramName(), this.symbolTable);
       ast.apply(codeGenerator);
       this.code = codeCache.getCode();
 
@@ -88,14 +106,14 @@ public class EasyCompiler {
     return false;
   }
 
-  //---------
+  // ---------
   // Analysis
-  //---------
+  // ---------
   void liveness() {
     if (parse() && typeCheck()) {
-      LivenessAnalyzer analyzer = new LivenessAnalyzer(ast, this.typeChecker.getSymbolTable());
+      LivenessAnalyzer analyzer = new LivenessAnalyzer(ast, this.symbolTable);
 
-      if (DEBUG) {
+      if (verbose) {
         analyzer.printGraph();
       }
 
@@ -109,11 +127,13 @@ public class EasyCompiler {
     }
 
     try {
-      this.ast = generateAST();
-      printAST();
+      this.ast = generateAbstractSyntaxTree();
+      printAbstractSyntaxTree();
       LineEvaluator.setLines(this.ast);
     } catch (IOException e) {
-      System.out.println(String.format("Input-Error: An error occurred while reading input file \"%s\".", this.sourceFilePath.toString()));
+      String filePath = this.sourceFilePath.toString();
+      System.out.println(
+          "Input-Error: An error occurred while reading input file \"%s\".".formatted(filePath));
       System.out.println(e.toString());
       return false;
     } catch (LexerException e) {
@@ -128,23 +148,36 @@ public class EasyCompiler {
     return true;
   }
 
-  boolean typeCheck() {
+  boolean buildSymbolTable() {
     if (!parse()) {
+      return false;
+    } else if (this.symbolTableBuilder != null) {
+      return true;
+    }
+
+    this.symbolTableBuilder = new SymbolTableBuilder();
+    this.ast.apply(symbolTableBuilder);
+    this.symbolTable = symbolTableBuilder.getSymbolTable();
+
+    return !this.symbolTableBuilder.errorsOccurred();
+  }
+
+  boolean typeCheck() {
+    if (!parse() || !buildSymbolTable()) {
       return false;
     } else if (this.typeChecker != null) {
       return true;
     }
 
-    this.typeChecker = new TypeChecker();
+    this.typeChecker = new TypeChecker(this.symbolTable);
     this.ast.apply(this.typeChecker);
 
-    if (!this.typeChecker.errorsOccurred()) {
-      if (DEBUG) {
-        this.typeChecker.printSymbolTable();
-      }
-      return true;
-    }
-    return false;
+    return !this.typeChecker.errorsOccurred();
+  }
+
+  int getSymbolErrorNumber() {
+    buildSymbolTable();
+    return symbolTableBuilder.getErrorNumber();
   }
 
   int getTypeErrorNumber() {
@@ -152,9 +185,9 @@ public class EasyCompiler {
     return this.typeChecker.getErrorNumber();
   }
 
-  //--------
+  // --------
   // Helpers
-  //--------
+  // --------
   String getProgramName() {
     return this.sourceFilePath.getFileName().toString().replaceAll(".easy", "");
   }
@@ -168,7 +201,7 @@ public class EasyCompiler {
     return file.getName().matches("[a-zA-Z]\\w*\\.easy");
   }
 
-  Start generateAST() throws IOException, LexerException, ParserException {
+  Start generateAbstractSyntaxTree() throws IOException, LexerException, ParserException {
     FileReader fileReader = new FileReader(this.sourceFilePath.toFile());
     PushbackReader pushbackReader = new PushbackReader(fileReader);
     Lexer lexer = new Lexer(pushbackReader);
@@ -176,8 +209,8 @@ public class EasyCompiler {
     return parser.parse();
   }
 
-  private void printAST() {
-    if ((this.ast != null) && DEBUG) {
+  private void printAbstractSyntaxTree() {
+    if ((this.ast != null) && verbose) {
       ASTPrinter printer = new ASTPrinter();
       this.ast.apply(printer);
     }
